crates/ars-components/src/utility/highlight/snapshots/ars_components__utility__highlight__tests__highlight_chunk_not_highlighted.snap
---
source: crates/ars-components/src/utility/highlight.rs
expression: "snapshot_attrs(&Api::new(Props::default()).chunk_attrs(false))"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-highlighted",
            ),
            String(
                "false",
            ),
        ),
        (
            Data(
                "ars-part",
            ),
            String(
                "highlight-chunk",
            ),
        ),
    ],
    styles: [],
}
