crates/ars-components/src/utility/highlight/snapshots/ars_components__utility__highlight__tests__highlight_chunks_contains_en.snap
---
source: crates/ars-components/src/utility/highlight.rs
expression: "snapshot_chunks(&highlight_chunks(&props, &en_us()))"
---
[
    HighlightChunk {
        text: "Hello ",
        highlighted: false,
    },
    HighlightChunk {
        text: "world",
        highlighted: true,
    },
    HighlightChunk {
        text: "!",
        highlighted: false,
    },
]
