crates/ars-components/src/utility/highlight/snapshots/ars_components__utility__highlight__tests__highlight_chunks_turkic.snap
---
source: crates/ars-components/src/utility/highlight.rs
expression: "snapshot_chunks(&highlight_chunks(&props, &turkish()))"
---
[
    HighlightChunk {
        text: "i",
        highlighted: true,
    },
    HighlightChunk {
        text: "stanbul",
        highlighted: false,
    },
]
