crates/ars-components/src/utility/highlight/snapshots/ars_components__utility__highlight__tests__highlight_root.snap
---
source: crates/ars-components/src/utility/highlight.rs
expression: "snapshot_attrs(&Api::new(Props::default()).root_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "root",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "highlight",
            ),
        ),
        (
            Dir,
            String(
                "auto",
            ),
        ),
    ],
    styles: [],
}
